--- a/scss/main.scss
+++ b/scss/main.scss
@@ -76,9 +76,9 @@ main {
   display: grid;
   grid-gap: 30px;
   grid-template-areas:
-    'bioimage bio bio'
-    'job1 job2 job3';
-  grid-template-columns: repeat(3, 1fr);
+    'bioimage bio '
+    'job1 job2';
+  grid-template-columns: repeat(2, 1fr);
 
   .bio-image {
     grid-area: bioimage;
@@ -100,9 +100,9 @@ main {
     grid-area: job2;
   }
 
-  .job-3 {
-    grid-area: job3;
-  }
+  // .job-3 {
+  //   grid-area: job3;
+  // }
 
   .job {
     background: lighten($primary-color, 5);
